k8s/k8s-examples/apps/stateless-web/stateless-nginx.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: stateless-web
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stateless-web
  replicas: 3 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: stateless-web
    spec:
      containers:
      - name: stateless-web
        imagePullPolicy: IfNotPresent
        image: harbor-repo.vmware.com/challagandlp/nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: stateless-web-lb
  namespace: default
  labels:
    app: stateless-web
  #annotations:
   #service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
 #externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: stateless-web
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: stateless-web-np
  namespace: default
  labels:
    app: stateless-web
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: stateless-web
